[package]
name = "rustsample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
env_logger = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
dotenv = "0.15.0"
lazy_static = "1.5.0"
tokio = { version = "1.39.1", features = ["full"] }
tokio-postgres = "0.7.11"
log = "0.4.22"